--- a/public/images/package.json
+++ b/public/images/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "compression": "^1.4.4",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
     "morgan": "~1.5.1",
+    "request": "^2.57.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "1.3.5"
   }
